--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -93,35 +93,6 @@ body {
     height: 30px;
 }
 
-.menu_change_button {
-    border: none;
-    background-color: #6e85b7;
-    color: white;
-    font-weight: bold;
-    height: 30px;
-    border-radius: 3px;
-}
-
-.menu_change_button:hover {
-    background-color: #f8f9d7;
-    color: rgb(70, 69, 74);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .user_container {
     display: flex;
     justify-content: space-between;
@@ -178,16 +149,32 @@ body {
 }
 
 .user_button_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     padding: 10px;
     margin-right: 20px;
 }
 
 .menu_change_button_box {
     padding: 10px;
+    margin-top: 0;
 }
 
 .menu_change_button_box button {
     font-size: 15px;
+    border: none;
+    background-color: #6e85b7;
+    color: white;
+    font-weight: bold;
+    height: 30px;
+    border-radius: 3px;
+}
+
+.menu_change_button_box button:hover {
+    background-color: #f8f9d7;
+    color: rgb(70, 69, 74);
 }
 
 .show_container {
@@ -1377,4 +1364,70 @@ body {
 }
 .btn--icon:hover {
     stroke: #fff;
+}
+
+
+/* 반려동물 프로필 삭제 모달 */
+
+.remove_pet_modal_box {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.remove_pet_modal_content {
+    position: relative;
+    background-color: white;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    overflow: hidden;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    padding: 30px;
+}
+
+.remove_pet_msg_box {
+    width: 100%;
+    margin: 10px 0 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.remove_pet_msg_box p{
+    margin: 0;
+    font-size: 18px;
+
+} 
+
+.remove_pet_msg_box span {
+    margin-left: 5px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.remove_pet_button_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    margin-top: 10px;
+}
+.remove_pet_button_box button{
+    width: 80px;
+    height: 30px;
+
+    font-size: 15px;
 }
