--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -244,13 +244,14 @@ body {
 
 .like_article_box {
     display: flex;
-    background-color: #c4d7e0;
-    width: 100%;
-    height: 100%;
     width: 850px;
-    min-height: 500px;
+    flex-wrap: wrap;
+    justify-content: space-around;
     border-radius: 8px;
+    background-color: #ffffff;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    min-height: 500px;
+    justify-content: flex-start;
 }
 
 .user_info_box {
