--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -200,7 +200,13 @@ body {
     padding: 23px;
     border-radius: 8px;
 }
-
+#like_article_box_wrapper {
+    width: 855px;
+    display: flex;
+    background-color: white;
+    padding: 23px;
+    border-radius: 8px;
+}
 .article_box {
     display: flex;
     width: 850px;
@@ -219,6 +225,7 @@ body {
     margin: 10px;
     border-radius: 8px;
     background-color: #D9D9D9;
+    
 
 }
 
@@ -235,12 +242,7 @@ body {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
-#like_article_box_wrapper {
-    display: flex;
-    background-color: white;
-    padding: 23px;
-    border-radius: 8px;
-}
+
 
 .like_article_box {
     display: flex;
@@ -248,6 +250,7 @@ body {
     width: 100%;
     height: 100%;
     width: 850px;
+    flex-wrap: wrap;
     min-height: 500px;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
