--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -101,14 +101,14 @@ body {
     background-color: #e7e7e7;
 }
 .history{
-    width: 200px;
+    width: 250px;
     height: fit-content;
     max-height: 600px;
     background-color: #fff;
     border-radius: 5px;
     position: absolute;
-    left: -40px;
-    top: 33px;
+    left: -80px;
+    top: 40px;
     z-index: 2;
     color: #000;
     font-size: 10px;
@@ -1083,6 +1083,15 @@ input[type=radio]:checked + label img {
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+@keyframes article_box_hover{
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.05);
     }
 }
 
