--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -1073,6 +1073,82 @@ input[type=radio]:checked + label img {
     padding: 3px 10px;
     border-radius: 5px;
 }
+.login_modal_box{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    z-index: 9999;
+}
+
+.login_box{
+    width: 400px;
+    height: 500px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.login_box h1{
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.login_box input{
+    width: 60%;
+    height: 40px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: bold;
+}
+.login_btn {
+    cursor: pointer;
+    width: 60%;
+    height: 40px;
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    background: skyblue;
+    color: white;
+}
+.login_btn button{
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
+    border: none;
+    background: none;
+    outline: none;
+}
+.kakao_login{
+    cursor: pointer;
+    width: 60%;
+    height: 40px;
+    border: 1px solid #e7e7e7;
+    background-color: yellow;
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* top transform */
 @keyframes fadeintop {
     from {
