--- a/static/css/dm.css
+++ b/static/css/dm.css
@@ -131,10 +131,61 @@ body {
     border-radius: 8px;
     background-color: #ffffff;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    min-height: 500px;
+    /* min-height: 500px; */
+    height: 600px;
     justify-content: flex-start;
+    flex-direction: column;
 }
 
 .chat_input_box {
     border: none;
+    margin-top: 1px;
+}
+
+.sendbox {
+    border: none;
+}
+
+.sendbox_inner {
+    border-radius: 10px;
+    /* border-color: rgb(19, 142, 203); */
+    border: none;
+    width: 692px;
+    height: 50px;
+    font-size: 20px;
+}
+
+.my_messages {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    /* align-items: flex-end; */
+}
+
+.my {
+    display: flex;
+    /* justify-content: flex-end; */
+    margin-left: auto;
+    margin-top: 20px;
+    width: 200px;
+    border: 1px solid rgb(98, 170, 215);
+    border-radius: 20px;
+    font-size: 15px;
+    padding: 10px;
+    width: fit-content;
+    max-width: 200px;
+    word-break: break-all;
+
+}
+
+.others {
+    justify-content: flex-start;
+    border: 1px solid rgb(98, 170, 215);
+    border-radius: 20px;
+    font-size: 15px;
+    /* margin: 10px; */
+    /* margin-left: 20px; */
+    max-width: 200px;
+    padding: 10px;
+    width: fit-content;
 }
