--- a/static/css/tournament.css
+++ b/static/css/tournament.css
@@ -68,7 +68,7 @@
     display: flex;
     margin-top: 50px;
     width: 80%;
-    height: 30%;
+    min-height: 200px;
     border: 1px dotted black
 }
 .event_rank_img{
@@ -122,7 +122,7 @@
 .event_vote{
     position: relative;
     width: 80%;
-    height: 100%;
+    height: 50%;
     display: flex;
     background-color: rgb(255, 255, 255);
     padding: 30px;
