--- a/static/css/neighbor.css
+++ b/static/css/neighbor.css
@@ -388,7 +388,12 @@
     transition: transform 0.5s;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
-
+.slide:hover{
+    font-size:2.2rem;
+    transform: scale(1.01);
+    transition: transform 0.5s;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+}
 /*Resize the wrap to see the search bar change!*/
 /* .wrap{
     width: 30%;
@@ -398,3 +403,62 @@
     transform: translate(-50%, -50%);
 } */
 /* 
+/*페이지네이션*/
+
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* gap: 16px; */
+    margin-top: 100px;
+    
+}
+.pages {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+.page {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+.page:hover {
+    background-color: #6e85b7;
+    color: #fff;
+}
+
+.active {
+    background-color: #6e85b7;
+    color: #fff;
+}
+
+.btn {
+    background-color: #fff;
+    border: 1px solid #6e85b7;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn:hover {
+    background-color: #6e85b7;
+}
+.btn--icon {
+    height: 24px;
+    width: 24px;
+    stroke: #6e85b7;
+}
+.btn--icon:hover {
+    stroke: #fff;
+}
