--- a/static/css/dm.css
+++ b/static/css/dm.css
@@ -23,13 +23,13 @@ body {
     justify-content: center;
     border-radius: 8px;
     margin: 30px;
-    width: 450px;
+    width: 430px;
     height: auto;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 125px;
-    left: 80px;
+    left: 60px;
     margin-top: 60px;
 }
 
@@ -163,6 +163,8 @@ body {
     height: 600px;
     justify-content: flex-start;
     flex-direction: column;
+    margin-top: -215px;
+    margin-left: 90px;
     overflow-x: hidden;
     overflow-y: scroll;
 }
@@ -182,6 +184,7 @@ body {
     width: 692px;
     height: 50px;
     font-size: 20px;
+    margin-left: 90px;
 }
 
 .messages {
