--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -23,7 +23,7 @@ body {
 
 /* 네비게이션 바 */
 
-.navbar {
+/* .navbar {
     background: #C4D7E0;
     height: 50px;
     width: 100%;
@@ -34,7 +34,7 @@ body {
     left: 0;
     margin-bottom: 30px;
     z-index: 1;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .logo {
@@ -74,10 +74,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* margin-right: 20px; */
+    margin-right: 20px;
 }
 
-.alarm{
+.alarm {
     position: relative;
     margin-right: 10px;
     width: 30px;
@@ -91,7 +91,8 @@ body {
     font-weight: bold;
     cursor: pointer;
 }
-.user_name{
+
+.user_name {
     font-size: 12px;
     font-weight: bold;
     color: #000;
@@ -100,7 +101,8 @@ body {
     padding: 2px 5px;
     background-color: #e7e7e7;
 }
-.history{
+
+.history {
     width: 250px;
     height: fit-content;
     max-height: 600px;
@@ -116,6 +118,7 @@ body {
     animation: reveal 0.5s ease-in-out;
     display: none;
 }
+
 .user_profile {
     cursor: pointer;
     display: flex;
@@ -145,7 +148,7 @@ body {
     border-radius: 5px;
     padding: 2px 5px;
     background-color: #ff0000;
-}
+} */
 
 
 /* 메인 */
@@ -329,6 +332,7 @@ body {
     padding: 23px;
     border-radius: 8px;
 }
+
 #pet_article_box_wrapper {
     width: 855px;
     display: flex;
@@ -336,6 +340,7 @@ body {
     padding: 23px;
     border-radius: 8px;
 }
+
 #like_article_box_wrapper {
     width: 855px;
     display: flex;
@@ -343,6 +348,7 @@ body {
     padding: 23px;
     border-radius: 8px;
 }
+
 .article_box {
     display: flex;
     width: 850px;
@@ -361,7 +367,7 @@ body {
     margin: 10px;
     border-radius: 8px;
     background-color: #D9D9D9;
-    
+
 
 }
 
@@ -606,10 +612,12 @@ body {
     display: none;
     text-align: center;
 }
-.modal_img_box{
-    width:220%;
+
+.modal_img_box {
+    width: 220%;
 }
-.modal_img_box img{
+
+.modal_img_box img {
     width: 100%;
 }
 
@@ -1410,11 +1418,13 @@ body {
     justify-content: center;
     align-items: center;
 }
-.update_pw_msg_box p{
+
+.update_pw_msg_box p {
     margin: 0;
     font-size: 18px;
 
-}   
+}
+
 .update_pw_input_box {
     display: flex;
     justify-content: center;
@@ -1422,8 +1432,9 @@ body {
 
     margin: 10px 0 20px 0;
 }
-.update_pw_input_box input{
-    
+
+.update_pw_input_box input {
+
     /* width: 100%; */
     height: 30px;
     font-size: 25px;
@@ -1437,7 +1448,8 @@ body {
     width: 100%;
     margin-top: 10px;
 }
-.update_pw_button_box button{
+
+.update_pw_button_box button {
     width: 80px;
     height: 30px;
 
@@ -1455,11 +1467,13 @@ body {
     gap: 16px;
     margin-top: 200px;
 }
+
 .pages {
     display: flex;
     flex-direction: row;
     gap: 20px;
 }
+
 .page {
     height: 40px;
     width: 40px;
@@ -1471,6 +1485,7 @@ body {
     justify-content: center;
     gap: 10px;
 }
+
 .page:hover {
     background-color: #6e85b7;
     color: #fff;
@@ -1493,14 +1508,17 @@ body {
     align-items: center;
     justify-content: center;
 }
+
 .btn:hover {
     background-color: #6e85b7;
 }
+
 .btn--icon {
     height: 24px;
     width: 24px;
     stroke: #6e85b7;
 }
+
 .btn--icon:hover {
     stroke: #fff;
 }
@@ -1542,13 +1560,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
-.remove_pet_msg_box p{
+
+.remove_pet_msg_box p {
     margin: 0;
     font-size: 18px;
 
-} 
+}
 
 .remove_pet_msg_box span {
     margin-left: 5px;
@@ -1564,7 +1583,8 @@ body {
     width: 100%;
     margin-top: 10px;
 }
-.remove_pet_button_box button{
+
+.remove_pet_button_box button {
     width: 80px;
     height: 30px;
 
