--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -91,7 +91,7 @@
     font-size: 10px;
     box-shadow: 0px 0px 5px rgba(254, 114, 114, 0.438);
     animation: reveal 0.5s ease-in-out;
-    display: none;
+    /* display: none; */
 }
 
 .user_profile {
