--- a/static/css/tournament.css
+++ b/static/css/tournament.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Poor+Story:400');
+
+* {
+    font-family: 'Poor Story', cursive;
+    font-size: 15px;
+}
+
 .tournament{
-    width: 90vw;
-    height: 90vh;
+    width: 100vw;
     display: flex;
-    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     overflow: hidden;
@@ -10,7 +15,7 @@
 .event{
     position: relative;
     width: 90%;
-    height: 90%;
+    height: 100%;
     display: flex;
     /* background-color: rgb(214, 214, 214); */
     /* justify-content: center; */
@@ -49,11 +54,16 @@
     text-align: center;
 }
 .event_logo{
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    left : 70px;
-    top: -70px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: larger;
+    font-weight: bold;
+    font-family: 'Nanum Pen Script', cursive;
+}
+.event_logo img{
+    height: 100%;
 }
 .tournament_info{
     width: 90vw;
@@ -170,6 +180,62 @@
     font-weight: bold;
     animation: scale 1s infinite;
 }
+.event_modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    display: none;
+}
+.event_img_upload{
+    position: relative;
+    width: 40%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    align-items: center;
+    box-shadow: 0px 0px 3px rgb(0, 0, 0.5);
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.event_up_btn{
+    top: 10px;
+    right: 10px;
+    position: absolute;
+    width: 80px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: large;
+    display: none;
+}
+#img_drag{
+    font-size: 30px;
+}
+#event_img{
+    width: 100%;
+    height: 100%;
+    display: none;
+    object-fit: cover;
+}
+
 @keyframes scale{
     0%{
         transform: scale(1);
