fix 토너먼트 로직수정

--- a/static/css/tournament.css
+++ b/static/css/tournament.css
@@ -236,6 +236,11 @@
     object-fit: cover;
 }
 
+#right_win, #left_win{
+    position: absolute;
+    display: none;
+}
+
 @keyframes scale{
     0%{
         transform: scale(1);
