--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -1474,3 +1474,57 @@ transform: scale(1.01);
 transition: transform 0.5s;
 box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
+
+/* 프로필 이미지 변경 모달 */
+
+.update_pi_modal_box {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.update_pi_modal_content {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    background-color: white;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    overflow: hidden;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    padding: 30px;
+}
+
+.update_pi_modal_content button{
+    display: flex;
+    align-items: center;
+    color: red;
+    font-size: 50px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    background-color: initial;
+}
+
+.update_pi_modal_content input{
+    display: none;
+}
+
+.update_pi_modal_content img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: none;
+}
