--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -2,7 +2,6 @@
 
 * {
     font-family: 'Poor Story', cursive;
-    font-size: 15px;
 }
 
 body,
@@ -538,8 +537,8 @@ body {
 
 .modal_content_list div {
     padding: 5px;
-    font-size: 14px;
-    /* border-bottom: 1px solid #e7e7e7; */
+    font-size: 18px;
+    word-break: break-all;
 }
 
 .modal_comment_text {
@@ -557,7 +556,7 @@ body {
     background: #EAF6F6;
     border-radius: 10px;
     color: #FF0063;
-    font-size: 14px;
+    font-size: 16px;
     display: flex;
     /* justify-content: center; */
 }
@@ -684,6 +683,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: scroll;
+    font-size: 16px;
 }
 
 .modal_desc {
@@ -949,7 +949,7 @@ input[type=radio]:checked+label img {
     resize: none;
     outline: none;
     overflow: scroll;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     border-radius: 10px;
     -ms-overflow-style: none;
