--- a/static/css/neighbor.css
+++ b/static/css/neighbor.css
@@ -221,16 +221,37 @@
     height:32px; 
     width: 120px;
 }
+/* 스크롤바*/
+
+.main_column_inner{
+    /* background-color: #04AA6D; */
+    overflow-x: scroll;
+    overflow-y: scroll;
+    width:100%; 
+    margin:20px; 
+    height:100%;
+    /* overflow: -moz-scrollbars-vertical; */
+    
+}
 
 
+::-webkit-scrollbar {
+    width:0.8rem;
+}
 
+::-webkit-scrollbar-track {
+    background-color: #9b9c9c;
+    margin-block:.5em;
+}
 
+::-webkit-scrollbar-thumb {
+    background-color: #2d2d2d;
+    border-radius:100vw;
+}
 
-
-
-
-
-
+::-webkit-scrollbar-thumb:hover {
+    background-color: #000000;
+}
 
 
 
