--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -20,6 +20,11 @@ body {
     width: 100vw;
     display: flex;
 }
+.modal_user_profile:hover{
+    color:#9a9a9a;
+    cursor: pointer;
+}
+
 
 
 /* 메인 */
@@ -35,7 +40,7 @@ body {
     /* border: 10px solid #e7e7e7;
     border-style: dotted; */
 
-    background-color: #baced7;
+    /* background-color: #baced7; */
 }
 
 .left_menu {
@@ -1473,4 +1478,13 @@ body {
 transform: scale(1.01);
 transition: transform 0.5s;
 box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+}
+
+
+.article_card{
+    background-color:beige; 
+    width:258px; 
+    height:350px; 
+    margin:10px;
+    border-radius:5px;
 }
