--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Poor+Story:400');
+
+* {
+    font-family: 'Poor Story', cursive;
+}
+
+
+
 body {
     margin: 0;
     padding: 0;
