--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -42,7 +42,8 @@ body {
     border-radius: 8px;
     margin: 30px;
     width: 150px;
-    height: 400px;
+    height: fit-content;
+    padding: 15px 0px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     position: sticky;
@@ -410,8 +411,8 @@ body {
 
 .modal_content {
     position: relative;
-    width: 1000px;
-    height: 800px;
+    width: 80%;
+    height: 80%;
     background-color: white;
     border-radius: 8px;
     display: flex;
