--- a/static/css/neighbor.css
+++ b/static/css/neighbor.css
@@ -20,7 +20,7 @@
 .time_bar {
     background-color: white;
     width: 100%;
-    height: 15vh;
+    height: 170px;
     border-radius: 8px;
 }
 
@@ -59,6 +59,7 @@
     cursor: pointer;
     opacity: 0.5;
     transition: opacity 100ms;
+    line-height:4rem;
 }
 
 .slide-arrow:hover,
@@ -79,12 +80,16 @@
 }
 
 .slide {
-    width: 100%;
+    width: 200%;
     height: 100%;
     flex: 1 0 100%;
     font-size: 2rem;
     color: #f9f9f9;
     text-align: center;
+    display:flex;
+    justify-content: center;
+
+
 }
 
 .slide:nth-child(1) {
