마이페이지 디테일모달 전송버튼 css수정

--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -828,6 +828,7 @@ button {
     justify-content: center;
     align-items: center;
     border-radius: 9px;
+    cursor:pointer;
 }
 
 .balloon_03 div {
