--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -24,9 +24,7 @@
     position: relative;
     margin-left: auto;
 }
-.serchs{
-    display: none;
-}
+
 .wrap-nav{
     width: 100%;
     display: flex;
@@ -153,4 +151,10 @@
     border-radius: 5px;
     padding: 2px 5px;
     background-color: #ff0000;
+}
+
+@media (min-width: 500px) {
+    .serchs{
+        display: none;
+    }
 }
