--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -566,6 +566,7 @@ body {
     color: #FF0063;
     font-size: 16px;
     display: flex;
+    word-break: break-all;
     /* justify-content: center; */
 }
 
