--- a/static/css/tournament.css
+++ b/static/css/tournament.css
@@ -104,6 +104,7 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    object-fit: cover;
 }
 .event_join{
     width: 80%;
@@ -115,7 +116,7 @@
     align-items: center;
     box-shadow: 0px 0px 3px rgb(0, 0, 0.5);
     cursor: pointer;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: bold;
 }
 .event_join_btn{
@@ -162,6 +163,7 @@
     width: 90%;
     height: 100%;
     border-radius: 10px;
+    object-fit: cover;
 }
 .event_left_img img{
     width: 90%;
