--- a/static/css/dm.css
+++ b/static/css/dm.css
@@ -1,10 +1,18 @@
 body {
     margin: 0;
 }
+.not_chat_info{
+    height: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+}
 
 .dm_container {
     width: 90vw;
     height: 90vh;
+    max-height: 900px;
     display: flex;
     justify-content: center;
     margin: 0 auto;
@@ -16,7 +24,7 @@ body {
     min-width: fit-content;
     height: 100%;
     background-color: aliceblue;
-    /* box-shadow: 0px 0px 3px #000; */
+    border-right: 1px solid #e7e7e7;
 }
 
 .chat_box {
@@ -25,10 +33,7 @@ body {
     min-width: fit-content;
     height: 100%;
     background-color: aliceblue;
-    box-shadow: 0px 0px 1px #000;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    /* box-shadow: 0px 0px 3px #000; */
+    /* border-left: 1px solid rgb(213 207 207); */
     /* display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -45,11 +50,11 @@ body {
 
 .chat_input {
     height: 5%;
-    box-shadow: 0px 0px 1px #000;
     color: white;
+    border-top: 1px solid #e7e7e7;
 }
 
-.chat_input input {
+.chat_input form input {
     width: 100%;
     height: 100%;
     border: none;
@@ -57,6 +62,7 @@ body {
     background-color: transparent;
     color: #000;
     font-size: 15px;
+    z-index: 2;
 }
 
 .chat_input input:focus {
@@ -112,6 +118,12 @@ body {
     font-size: 12px;
     justify-content: center;
 }
+.chat_user_profile{
+    word-break: break-all;
+    width: 100%;
+    overflow: hidden;
+    margin-top: 5px;
+}
 
 .chat_user_id {
     font-weight: bold;
@@ -125,7 +137,6 @@ body {
     padding: 10px;
     background-color: #e6e6e6;
     width: fit-content;
-    max-width: 50%;
     height: fit-content;
     border-radius: 10px;
     margin: 15px;
@@ -139,8 +150,9 @@ body {
 
 .target_user_chat {
     display: flex;
-    max-width: 200px;
     width: fit-content;
+    max-width: 200px;
+    word-break: break-all;
     flex-direction: column;
     padding: 10px;
 }
@@ -167,4 +179,6 @@ body {
     display: flex;
     flex-direction: column;
     padding: 10px;
+    max-width: 200px;
+    word-break: break-all;
 }
