--- a/static/css/dm.css
+++ b/static/css/dm.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
 }
-.not_chat_info{
+
+.not_chat_info {
     height: 95%;
     display: flex;
     justify-content: center;
@@ -52,6 +53,16 @@ body {
     height: 5%;
     color: white;
     border-top: 1px solid #e7e7e7;
+}
+
+.chat_input form {
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: #000;
+    font-size: 15px;
 }
 
 .chat_input form input {
@@ -118,7 +129,8 @@ body {
     font-size: 12px;
     justify-content: center;
 }
-.chat_user_profile{
+
+.chat_user_profile {
     word-break: break-all;
     width: 100%;
     overflow: hidden;
