--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -13,6 +13,7 @@
 }
 
 .logo {
+    width: fit-content;
     margin-left: 10px;
     font-size: 20px;
     font-weight: bold;
@@ -82,6 +83,7 @@
 }
 
 .user_name {
+    width: fit-content;
     font-size: 12px;
     font-weight: bold;
     color: #000;
